organization detaiils added

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.verbose=true
-sonar.organization=valaxy01
+sonar.organization=valaxy01-key1
 sonar.projectKey=valaxy01-key1_twittertrend
 sonar.projectName=twittertrend
 sonar.language=java
